# the-nightly-build

./: .gitignore  .markdownlint-cli2.jsonc  .pre-commit-config.yaml  .prettierignore  .stylelintrc.json  AGENTS.md  PROTOCOL.md  README.md  eslint.config.js  package-lock.json  package.json  pyproject.toml  setup.sh
.byor/rules/project/: nbjs-innerhtml-escape.yml
.claude/skills/: correspondent  desk  editor  librarian  researcher  writer  writing-coach
.github/workflows/: check.yml  ci.yml  morning-mail.yml  publish.yml  validate-press.yml
assets/: architecture.dot
docs/: charts.md  customization.md  delivery.md  figures.md  harnesses.md  press.md  production.md  scheduling.md  series.md  source-assets.md
docs/agent-only/: PHASE-6-E2E-RUNBOOK.md  THE-NIGHTLY-BUILD-HANDOFF.md
engine/: build_record.py  build_site.py  capture_figure.py  check.py  ci_helpers.py  duty.py  morning_gate.py  nb_meta.py  production_policy.py  render_chart.py  render_check.py  validate_config.py
engine/assets/: nb.css  nb.js
engine/assets/themes/: newspaper.css
engine/nb/: __init__.py  article.py  config.py  links.py  meta.py  production_policy.py  report.py  source_policy.py
engine/nb/proof/: __init__.py  meta.py  mode.py  pr.py  prose.py  sources.py  structure.py
engine/nb/site/: __init__.py  assets.py  catalog.py  feeds.py  library.py  pages.py
engine/tests/: _harness.py  make_fixtures.py  run_builder_tests.py  run_e2e_test.py  run_tests.py
engine/tests/fixtures/: valid-article.html  valid-brief.html  valid-chronicle.html
engine/tests/js/: nb.test.js
examples/: README.md  editorial.md  production.yaml  site.yaml
examples/furniture/: catalog.md  styles.css
examples/templates/: divide.html  registry.yaml
examples/themes/: newsroom.css
harnesses/: claude-code.md  codex.md  jules.md
press/: editorial.md  site.yaml
press/furniture/: catalog.md  styles.css
scripts/: install-charts.sh  install-figure-capture.sh  setup.sh  sync.sh
scripts/gallery/: build.py
skills/correspondent/: SKILL.md
skills/desk/: SKILL.md
skills/editor/: SKILL.md
skills/librarian/: SKILL.md
skills/researcher/: SKILL.md
skills/writer/: SKILL.md
skills/writing-coach/: SKILL.md
spec/: banned-terms.yaml  editorial.md  headlines.md  meta.schema.json
templates/: FURNITURE.md  article.html  brief.html  chronicle.html  deck.html  dossier.html  lesson.html  paper.html  registry.yaml
templates/article/: brief.md  identity.md  manifest.yaml  skeleton.html
templates/brief/: identity.md  manifest.yaml  skeleton.html
templates/lesson/: furniture.md  skeleton.html
templates/paper/: furniture.css  furniture.md  identity.md  manifest.yaml  skeleton.html
templates/unbiased/: furniture.css  furniture.md  identity.md  manifest.yaml  skeleton.html
tests/: conftest.py  findings.py  press.py  test_build_record.py  test_ci_helpers.py  test_corpus.py  test_duty.py  test_gallery.py  test_library_corpus.py  test_production_policy.py  test_render_chart.py  test_source_policy.py  test_sync_script.py  test_validate_config.py
tests/corpus/: findings.json
tests/e2e/: test_dress_rehearsal.py
tests/js/: nb.test.js
tests/proof/: test_meta.py  test_mode.py  test_pr_mode.py  test_prose.py  test_rubric.py  test_smoke.py  test_sources.py  test_structure.py  test_templates.py
tests/site/: conftest.py  pages.py  test_articles.py  test_catalog.py  test_dateless.py  test_empty_and_stale.py  test_external_assets.py  test_feeds.py  test_hostile_input.py  test_newsstand.py  test_pages.py  test_preview.py  test_read_meta.py  test_series_modes.py  test_source_labels.py  test_theme.py
(+89 files in other folders)
