[project]
name = "nightly-build-engine"
version = "0.1.0"
description = "The Nightly Build protocol engine (the proof and site builder)"
requires-python = ">=3.10"
dependencies = ["pyyaml>=6.0"]

[dependency-groups]
dev = [
    "ruff>=0.14",
    "ty>=0.0.1a1",
    "pre-commit>=4.0",
    "websocket-client>=1.9.0",
]

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
# Formatter owns line length, so E501 is off; the rest catch real defects.
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]
