[project]
name = "nightly-build-engine"
version = "0.1.0"
description = "The Nightly Build protocol engine (the proof and site builder)"
requires-python = ">=3.10"
dependencies = ["pyyaml>=6.0"]

[dependency-groups]
dev = [
    "ruff>=0.14",
    "ty>=0.0.1a1",
    "pre-commit>=4.0",
    "websocket-client>=1.9.0",
    "pytest>=9.1.1",
]
figure-capture = [
    "pillow>=12.3.0",
    "playwright>=1.61.0",
    "pymupdf>=1.28.0",
]
charts = [
    "kaleido>=1.1.0",
    "pandas>=2.0.0",
    "plotly>=6.3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
# The engine ships as loose modules, not a package: `import check` is how
# every caller reaches it. Putting engine/ on the path here is what keeps
# sys.path hacks out of the test files. scripts/ rides along so the gallery
# builder is importable as gallery.build.
pythonpath = ["engine", "scripts"]
addopts = "-q --strict-markers"
markers = [
    "slow: runs a real git press end to end (deselect with -m 'not slow')",
]

[tool.ty.environment]
# The same roots pytest puts on the path, so the type checker resolves
# `import check` and `gallery.build` exactly as the suite does.
extra-paths = ["engine", "tests", "scripts"]

[tool.ruff]
target-version = "py310"
# The same roots the suite sees at runtime (pytest puts engine/ and each test
# directory on sys.path), so import sorting classifies local modules as
# first-party. Without this, `from press import ...` (tests/press.py) flips
# between first- and third-party depending on whether a fork has a press/
# content directory at the repo root, and lint goes red only on forks.
src = [".", "engine", "tests", "tests/site"]

[tool.ruff.lint]
# Formatter owns line length, so E501 is off; the rest catch real defects.
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]
